--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
-    <!-- font : Oleo Script Swash Caps -->
+    <!-- font-name: Lily Script One -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lily+Script+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- start header -->
@@ -38,6 +38,7 @@
                 </div>
             </a>
             <nav>
+                <i class="fas fa-bars my-menu"></i>
                 <ul>
                     <li><a class="active" href="#">Home</a></li>
                     <li><a href="#">Services</a></li>
