--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
                 </div>
             </div>
         </div>
-    <!-- end services -->
+        <!-- end services -->
 
-    <!-- start design -->
+        <!-- start design -->
         <div class="design">
             <img src="images/mobile.png" alt="images-mobile">
             <div class="text">
@@ -154,86 +154,207 @@
     <!-- end design -->
 
     <!-- start portfolio -->
-    <div class="portfolio">
-        <div class="container">
-            <div class="special-heading">
-                <h3>portfolio</h3>
-                <p>
-                    Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
-                    Mauris blandit aliquet elit, eget tincidunt.
-                </p>
+        <div class="portfolio">
+            <div class="container">
+                <div class="special-heading">
+                    <h3>portfolio</h3>
+                    <p>
+                        Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+                        Mauris blandit aliquet elit, eget tincidunt.
+                    </p>
+                </div>
+                <div class="portfolio-filter">
+                    <ul>
+                        <li class="active">All</li>
+                        <li>App</li>
+                        <li>Photo</li>
+                        <li>Web</li>
+                        <li>Print</li>
+                    </ul>
+                </div>
             </div>
-            <div class="portfolio-filter">
-                <ul>
-                    <li class="active">All</li>
-                    <li>App</li>
-                    <li>Photo</li>
-                    <li>Web</li>
-                    <li>Print</li>
-                </ul>
+            <div class="images-container">
+                <div class="box">
+                    <img src="images/shuffle-01.jpg" alt="portfolio image">
+                    <div class="caption">
+                        <h4>Awesome Image</h4>
+                        <p>Photography</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="images/shuffle-02.jpg" alt="portfolio image">
+                    <div class="caption">
+                        <h4>Awesome Image</h4>
+                        <p>Photography</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="images/shuffle-03.jpg" alt="portfolio image">
+                    <div class="caption">
+                        <h4>Awesome Image</h4>
+                        <p>Photography</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="images/shuffle-04.jpg" alt="portfolio image">
+                    <div class="caption">
+                        <h4>Awesome Image</h4>
+                        <p>Photography</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="images/shuffle-05.jpg" alt="portfolio image">
+                    <div class="caption">
+                        <h4>Awesome Image</h4>
+                        <p>Photography</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="images/shuffle-06.jpg" alt="portfolio image">
+                    <div class="caption">
+                        <h4>Awesome Image</h4>
+                        <p>Photography</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="images/shuffle-07.jpg" alt="portfolio image">
+                    <div class="caption">
+                        <h4>Awesome Image</h4>
+                        <p>Photography</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="images/shuffle-08.jpg" alt="portfolio image">
+                    <div class="caption">
+                        <h4>Awesome Image</h4>
+                        <p>Photography</p>
+                    </div>
+                </div>
+            </div>
+            <a href="#" class="more">More</a>
+        </div>
+        <!-- end portfolio -->
+        <!-- start video  -->
+        <div class="video">
+            <video autoplay loop muted src="videos/Kasper - Template Two.mp4"></video>
+            <div class="caption">
+                <h2>Super Awesome Video Here</h2>
+                <p>Its All You Need</p>
+                <a href="#">see more</a>
             </div>
         </div>
-        <div class="images-container">
-            <div class="box">
-                <img src="images/shuffle-01.jpg" alt="portfolio image">
-                <div class="caption">
-                    <h4>Awesome Image</h4>
-                    <p>Photography</p>
+        <!-- end video  -->
+        <!-- start about -->
+        <div class="about">
+            <div class="container">
+                <div class="special-heading">
+                    <h3>about us</h3>
+                    <p>
+                        Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+                        Mauris blandit aliquet elit, eget tincidunt.
+                    </p>
                 </div>
             </div>
-            <div class="box">
-                <img src="images/shuffle-02.jpg" alt="portfolio image">
-                <div class="caption">
-                    <h4>Awesome Image</h4>
-                    <p>Photography</p>
+            <!-- start design  -->
+            <div class="about-design">
+                <div class="image">
+                    <img src="images/about.png" alt="image-about">
+                    <div class="about-box">
+                        <div class="box-info">
+                            <i class="fas fa-mug-hot"></i> 
+                            <div class="number">1.236</div >
+                            <p>Coffee Drinks</p>
+                        </div>
+                        <div class="box-info">
+                            <i class="far fa-folder"></i>
+                            <div class="number">1.236</div>
+                            <p>Coffee Drinks</p>
+                        </div>
+                        <div class="box-info">
+                            <i class="far fa-envelope"></i>
+                            <div class="number">1.743</div>
+                            <p>Mail Sent</p>
+                        </div>
+                        <div class="box-info">
+                            <i class="fas fa-trophy"></i>
+                            <div class="number">17</div>
+                            <p>Awards Received</p>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="box">
-                <img src="images/shuffle-03.jpg" alt="portfolio image">
-                <div class="caption">
-                    <h4>Awesome Image</h4>
-                    <p>Photography</p>
-                </div>
-            </div>
-            <div class="box">
-                <img src="images/shuffle-04.jpg" alt="portfolio image">
-                <div class="caption">
-                    <h4>Awesome Image</h4>
-                    <p>Photography</p>
-                </div>
-            </div>
-            <div class="box">
-                <img src="images/shuffle-05.jpg" alt="portfolio image">
-                <div class="caption">
-                    <h4>Awesome Image</h4>
-                    <p>Photography</p>
-                </div>
-            </div>
-            <div class="box">
-                <img src="images/shuffle-06.jpg" alt="portfolio image">
-                <div class="caption">
-                    <h4>Awesome Image</h4>
-                    <p>Photography</p>
-                </div>
-            </div>
-            <div class="box">
-                <img src="images/shuffle-07.jpg" alt="portfolio image">
-                <div class="caption">
-                    <h4>Awesome Image</h4>
-                    <p>Photography</p>
-                </div>
-            </div>
-            <div class="box">
-                <img src="images/shuffle-08.jpg" alt="portfolio image">
-                <div class="caption">
-                    <h4>Awesome Image</h4>
-                    <p>Photography</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- end portfolio -->
+            <!-- end design  -->
 
+            <!-- start testmonials & skills -->
+            <div class="container">
+                <div class="testmon-skills">
+                    <div class="testmonials">
+                        <div class="monials">
+                            <h3>testmonials</h3>
+                            <p>
+                                Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+                                Mauris blandit aliquet elit, eget tincidunt.
+                            </p>
+                        </div>
+                        <div class="info">
+                            <div class="box">
+                                <img src="images/skills-01.jpg" alt="photo-mane">
+                                <p>
+                                    Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+                                    Mauris blandit aliquet elit, eget tincidunt.
+                                </p>
+                            </div>
+                            <div class="box">
+                                <img src="images/skills-02.jpg" alt="photo-mane">
+                                <p>
+                                    Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+                                    Mauris blandit aliquet elit, eget tincidunt.
+                                </p>
+                            </div>
+                        </div>
+                        <ul class="bullets">
+                            <li></li>
+                            <li class="active"></li>
+                            <li></li>
+                        </ul>
+                    </div>
+
+                    <div class="skills">
+                        <div class="info">
+                            <h3>skills</h3>
+                            <p>
+                                Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+                                Mauris blandit aliquet elit, eget tincidunt.
+                            </p>
+                        </div>
+                        <div class="contianer-skills">
+                            <p>adob</p>
+                            <div class="bar" style="--p: 90%;">
+                                <div></div>
+                                <div p="90%"></div>
+                            </div>
+                            <p>html & css</p>
+                            <div class="bar" style="--p: 85%;">
+                                <div></div>
+                                <div p="85%"></div>
+                            </div>
+                            <p>JavaScript</p>
+                            <div class="bar" style="--p: 80%;">
+                                <div></div>
+                                <div p="80%"></div>
+                            </div>
+                            <p>python</p>
+                            <div class="bar" style="--p: 90%;">
+                                <div></div>
+                                <div p="90%"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- enf testmonials & skills -->
+        </div>
+        <!-- end about -->
     </section>
 </body>
 </html>
